# cocli

./: .gitignore  .qclrc  OPTIMIZATION.md  QUICKSTART.md  README.md  RELEASE.bat  RELEASE.md  RELEASE.sh  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.github/: SETUP.md
.github/workflows/: README.md  ci.yml  deploy-docs.yml  release.yml
apps/main/: .npmignore  .npmrc  Cargo.toml  Cross.toml  INSTALL.md  PUBLISH.md  README.md  package.json
apps/main/src/: ai.rs  atomic.js  cache.js  commands.js  commands.rs  config-simple.js  config.js  config.rs  defaults.js  index.js  interactive.js  main.rs  repo.js  repo.rs  skills.rs  suggest.rs  template.js  template.rs  util.js
docs/: CONTRIBUTING.md  README.md  index.md
docs/.vitepress/: README.md  config.ts
docs/commands/: addons.md  ai.md  app.md  config.md  index.md  init.md  template.md  workspace.md
docs/config/: env.md  index.md  meta-yaml.md  meta.md  qclocal.md  qclrc.md  repos.md
docs/examples/: addons.md  basic.md  index.md  inherit.md  team.md  troubleshooting.md  vue-project.md  vue3-project.md  workspace.md
docs/guide/: addons.md  advanced.md  app.md  commands.md  getting-started.md  init.md  installation.md  repo.md  repository-setup.md  template.md  templates.md  (+1 more)
scripts/: postinstall.js
test/: .qclrc
test-workspace/: .qclrc
tests/: README.md  addons.test.ts  app.test.ts  atomic.test.ts  cache.test.ts  commands.test.ts  config.test.ts  index.test.ts  init.test.ts  plop.test.ts  template.test.ts  utils.ts  workspace.test.ts
workspace-test/: .qclrc  meta.yaml
(+2 files in other folders)
