[package]
name = "cocli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
fs_extra = "1.3"
git2 = { version = "0.18", features = ["vendored-openssl"] }
url = "2.5"
suppaftp = "5.0"
glob = "0.3"
chrono = "0.4"
# AI 和 MCP 相关依赖
tokio-stream = "0.1"
